--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -67,7 +70,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:4.2.2"
 
     //pagination Paging 3
-    def paging_version = "3.1.1"
+    def paging_version = "3.1.0"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     //navigation
