--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,9 @@ dependencies {
     def room_version = "2.5.1"
 
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+//    annotationProcessor "androidx.room:room-compiler:$room_version"
+//    kapt "android.arch.persistence.room:compiler:$room_version"
+    // Room Kotlin extensions
+    implementation "androidx.room:room-ktx:$room_version"
 }
